# IC25-2025

./: .gitignore  README.md  classification.py  main.py  pyproject.toml  results.csv  search.py  search_app.py  semantic_search.py  to_csv.py
data/: department.csv  departments.csv
data/pii/: data.csv  requests_parsed.csv
src/: classification.py  to_csv.py
