[project]
name = "ic25-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.10.0",
    "flask>=3.1.0",
    "lxml>=5.3.1",
    "marimo>=0.11.13",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.5",
    "sentence-transformers>=3.4.1",
]
