[project]
name = "ic25-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "flask>=3.1.0",
    "html5lib>=1.1",
    "keybert>=0.9.0",
    "lxml>=5.3.1",
    "marimo>=0.11.13",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "sentence-transformers>=3.4.1",
    "streamlit>=1.43.0",
]
